--- a/app/assets/javascripts/templates/feedback_admin.html.erb
+++ b/app/assets/javascripts/templates/feedback_admin.html.erb
@@ -1,10 +1,12 @@
-<div id="container" ng-app='two_way' ng-controller='two_way_control'>
-      <div class="row" ng-repeat="data in feedbacks">
-        <div class=".col-sm-6 .col-md-5 .col-lg-6">
-          <h4>Lista povratnih informacija</h4><hr>
-          <p>
-            {{content}}
-          </p>
-        </div>
-      </div>
-    </div>
+Search: <input ng-model="query">
+Sort by:
+<select ng-model="orderProp">
+  <option value="name">Alphabetical</option>
+  <option value="age">Newest</option>
+</select>
+
+<ul class="phones" ng-controller="two_way_control">
+  <li ng-repeat="phone in phones | filter:query | orderBy:orderProp">
+    <span>{{phone.name}}</span>
+  </li>
+</ul>
