bacground picture correction

--- a/app/assets/javascripts/templates/home_admin.html.erb
+++ b/app/assets/javascripts/templates/home_admin.html.erb
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="col-sm-3 col-md-3" ng-click="openFeedback()">
-                <div class="wow fadeInLeft animated" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+                <div class="wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
                 <div class="service-box">
                     <div class="service-icon">
                         <img src="/assets/feedback-icon.png" alt="" height="100" width="100" align="middle">
@@ -70,6 +70,19 @@
                     <div class="service-desc">
                         <h5>Upravljanje feedback-om</h5>
                         <p>Omogućeno pregledanje svih primljenih povratinih informacija od korisnika, te odabir određenih za prikaz na početnoj stranici.</p>
+                        </div>
+                </div>
+                </div>
+            </div>
+            <div class="col-sm-3 col-md-3" ng-click="openFeedback()">
+                <div class="wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+                <div class="service-box">
+                    <div class="service-icon">
+                        <img src="/assets/category.png" alt="" height="100" width="100" align="middle">
+                    </div>
+                    <div class="service-desc">
+                        <h5>Upravljanje kategorijama</h5>
+                        <p>Omogućeno pregledanje, dodavanje novih i brisanje već postojećih kategorija.</p>
                         </div>
                 </div>
                 </div>
