--- a/app/assets/javascripts/templates/register.html.erb
+++ b/app/assets/javascripts/templates/register.html.erb
@@ -5,6 +5,7 @@
 </head>
 <body>
 	<div class="container">    
+	<div class="bcg" style="height:600px">
 	    <div class="register-wall">
 			<form class="form-register" name="myForm" ng-controller="RegistrationController">
 
@@ -89,6 +90,7 @@
 				</div>
 			  </form>
 			</div>
+		</div>
 		</div>
 	</div>
 </body>
