--- a/app/assets/javascripts/templates/inputs-password-reset.html.erb
+++ b/app/assets/javascripts/templates/inputs-password-reset.html.erb
@@ -1,28 +1,30 @@
 <!--Form for password reset after mail is sent-->
-<div class="container">     
-	<div class="reset-pass">
-	    <form class="form-signin" name="myForm" ng-controller="InsertPwdForResetController">
-	    	<!--title-->
-	    	<h1 class="text-center login-title">eSavjetovaliste</h1>
+<div class="container">
+	<div class="bcg" style="height:600px">     
+		<div class="reset-pass">
+		    <form class="form-signin" name="myForm" ng-controller="InsertPwdForResetController">
+		    	<!--title-->
+		    	<h1 class="text-center login-title">eSavjetovaliste</h1>
 
-	    	<!-- input password-->
-			<div class="input-prepend">
-	      		<span class="add-on"><i class="icon-lock"></i></span>
-				<input name="password" type="password" minlength="3" class="formr-control" placeholder="Šifra" ng-model="user.password" required autofocus/><br>
-				<!--password validation (client side)-->
-				<span style="color:red" ng-show="myForm.password.$dirty && myForm.password.$invalid">
-				    <span ng-show="myForm.password.$error.required">Unos pasvorda je obavezan.</span>Pasvord mora imati više od 3 karaktera.
-				</span>	
-			</div>
+		    	<!-- input password-->
+				<div class="input-prepend">
+		      		<span class="add-on"><i class="icon-lock"></i></span>
+					<input name="password" type="password" minlength="3" class="formr-control" placeholder="Šifra" ng-model="user.password" required autofocus/><br>
+					<!--password validation (client side)-->
+					<span style="color:red" ng-show="myForm.password.$dirty && myForm.password.$invalid">
+					    <span ng-show="myForm.password.$error.required">Unos pasvorda je obavezan.</span>Pasvord mora imati više od 3 karaktera.
+					</span>	
+				</div>
 
-			<!--input password confirmation-->
-			<div class="input-prepend">
-	  			<span class="add-on"><i class="icon-lock"></i></span>
-			  	<input name="passwordc" type="password" class="formr-control" placeholder= "Potvrda šifre" ng-model="user.password_confirmation" />
-			</div>
+				<!--input password confirmation-->
+				<div class="input-prepend">
+		  			<span class="add-on"><i class="icon-lock"></i></span>
+				  	<input name="passwordc" type="password" class="formr-control" placeholder= "Potvrda šifre" ng-model="user.password_confirmation" />
+				</div>
 
-			<!--submit button-->
-	        <button class="btn btn-lg btn-primary btn-block" ng-click="doResetConfirm()"  ng-disabled="loginForm.$invalid">Promjena</button>
-	    </form>
-    </div>
+				<!--submit button-->
+		        <button class="btn btn-lg btn-primary btn-block" ng-click="doResetConfirm()"  ng-disabled="loginForm.$invalid">Promjena</button>
+		    </form>
+	    </div>
+	</div>
 </div>
