--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,7 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-
-	<div class="container">
-		<ul class="nav nav-tabs">
-			<!--<li><%=link_to "Registration", root_path %></li>-->
-		</ul>
+<body class="bcgnone">
 
 	  <%= yield %>  
 
