--- a/app/assets/javascripts/templates/feedback_admin.html.erb
+++ b/app/assets/javascripts/templates/feedback_admin.html.erb
@@ -1,20 +1,16 @@
-Search: <input ng-model="query">
-Sort by:
+Pretraga: <input ng-model="query">
+Sortiraj po:
 <select ng-model="orderProp">
-  <option value="name">Alphabetical</option>
-  <option value="age">Newest</option>
+  <option value="name">Imenima</option>
+  <option value="description">Opisu</option>
+  <option value="email">Emailu</option>
+  <option value="form">Tipu</option>
 </select>
 
-<!--<ul class="phones" ng-controller="two_way_control">
-  <li ng-repeat="phone in phones | filter:query | orderBy:orderProp">
-    <span>{{phone.name}}</span>
-  </li>
-</ul>-->
-
-<div ng-controller="StocksCtrl">
+<div ng-controller="FeedbackCtrl">
   <ul>
-    <li ng-repeat="stock in stocks">
-      {{stock.name}}, {{stock.description}}
+    <li ng-repeat="feedback in feedbacks | filter:query | orderBy:orderProp">
+      {{feedback.name}}, {{feedback.description}}, {{feedback.email}},  {{feedback.form}}
     </li>
   </ul>
 </div>
