--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -665,4 +665,7 @@ img {
   animation-name: fadeInUp;
 }
 /*end of homeAdmin animation*/
+.normal{
+  color:#000000;
+}
 /*end of design for home_Admin*/
