#Added searching users by some parameters, #added buttons for adding, changing and deleting user, #added some htmls for changing data about user from user and from manager

--- a/app/assets/javascripts/templates/feedback_admin.html.erb
+++ b/app/assets/javascripts/templates/feedback_admin.html.erb
@@ -10,7 +10,7 @@ Sortiraj po:
 <div ng-controller="FeedbackCtrl">
   <ul>
     <li ng-repeat="feedback in feedbacks | filter:query | orderBy:orderProp">
-      {{feedback.id}}, {{feedback.name}}, {{feedback.description}}, {{feedback.email}},  {{feedback.form}}
+      {{feedback.name}}, {{feedback.description}}, {{feedback.email}},  {{feedback.form}}
     </li>
   </ul>
 </div>
