--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -669,3 +669,15 @@ img {
   color:#000000;
 }
 /*end of design for home_Admin*/
+/*design for feedback_admin*/
+.pretraga{
+  margin-left:20px;
+}
+.tabela{
+  width:60%;
+  margin-left:250px;
+}
+/*end of design for feedback_admin*/
+.btn-usr-mng{
+  width:100px;
+}
