--- a/app/assets/javascripts/templates/home.html.erb
+++ b/app/assets/javascripts/templates/home.html.erb
@@ -4,13 +4,10 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom" class="bcgnone">
+    <div  ng-controller="HomeController">
     <!-- Navigation bar -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div ng-controller="LanguageController">
-      <button ng-click="changeLanguage('bs')">BS</button>
-      <button ng-click="changeLanguage('en')">EN</button>
-    </div> 
-        <div class="container" ng-controller="HomeController">
+        <div class="container">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
@@ -32,7 +29,7 @@
         </div>
         <!-- /.container -->
     </nav>
-
+ 
     <!-- Section: intro -->
     <section id="intro" class="intro">
         <div class="slogan">
@@ -44,6 +41,11 @@
             </a>
         </div>
     </section>
+    </div>
+    <div ng-controller="LanguageController">
+      <button ng-click="changeLanguage('bs')">BS</button>
+      <button ng-click="changeLanguage('en')">EN</button>
+    </div>
     <!-- /Section: intro -->
 </body>
 
